# Miley

./: .dockerignore  .gitignore  .profile.example  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  Rocket.toml  Vagrantfile  docker-compose.yml  manage.py  package.json  requirements.txt  webpack.config.js
__test__/: app.test.js
accounts/: forms.py  models.py  schema.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20170630_2120.py  0003_auto_20170808_0204.py
activities/: admin.py  models.py  schema.py  tests.py  utils.py
activities/migrations/: 0001_initial.py
blog/: admin.py  feeds.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
blog/templatetags/: blog_tags.py
common/: decorators.py
coupons/: admin.py  models.py  views.py
coupons/migrations/: 0001_initial.py
images/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_auto_20170702_2047.py  0003_auto_20170702_2138.py  0004_image_total_likes.py
miley/: celery.py  schema.py  settings.py  urls.py  views.py  wsgi.py
miley/templates/: base.html  homepage.html
payments/: apps.py  singals.py  views.py
shop/: admin.py  cart.py  forms.py  models.py  schema.py  tasks.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_user.py  0003_order_orderitem.py
src/: auth.rs  db.rs  graphql.rs  main.rs
src/css/: main.scss
tests/: demo.rs
videos/: models.py  tests.py  urls.py  views.py
(+81 files in other folders)
