[package]
name = "viden"
version = "0.1.0"
authors = ["shavit <shavit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
juniper = "0.8.1"

[dependencies.rocket_contrib]
features = ["json", "msgpack"]
