[package]
name = "viden"
version = "0.1.0"
authors = ["shavit <shavit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
warp = "0.3"
juniper = "0.15.4"
serde_json = "1.0.64"
futures = "0.3.14"
futures-macro = "0.3.14"
uuid = "0.8.2"
serde = "1.0.125"
jsonwebtoken = "7.2.0"
chrono = "0.4.0"

[dependencies.rocket_contrib]
features = ["json", "msgpack"]
